Test with docs